# mcp-server-solidworks

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  README.md  master-architecture.md
.github/workflows/: ci.yml
adapters/claude/: .env  adapter_log.py  architecture.md  config.py  execution_client.py  ir_execution_port.py  requirements-dev.txt  response_mapper.py  server.py
adapters/claude/tests/: test_schema_contract.py
cad-planner/: architecture.md  recipe-usage.md
cad-planner/contracts/: analysis-artifact.schema.json  feature-graph.schema.json
solidworks-compiler/: architecture.md  pyproject.toml
solidworks-compiler/pycompiler/: __init__.py  compiler.py  errors.py  execution_port.py  ir_schema.py  lowering.py  resolver.py
solidworks-compiler/pycompiler/tests/: test_compiler.py  test_ir_schema_contract.py
solidworks-execution/: SolidworksExecution.sln  architecture.md
solidworks-execution/SolidworksExecution/: Program.cs  SolidworksExecution.csproj  Startup.cs
solidworks-execution/SolidworksExecution/Controllers/: ToolController.cs
solidworks-execution/SolidworksExecution/Infrastructure/: ExecLog.cs  IOperationGuard.cs  OperationGuard.cs  StaExecutor.cs
solidworks-execution/SolidworksExecution/Models/: CadState.cs  ExecutionResponse.cs  ToolRequest.cs
solidworks-execution/SolidworksExecution/Services/: SolidWorksService.Analyze.cs  SolidWorksService.Assembly.cs  SolidWorksService.Drawing.cs  SolidWorksService.Features.cs  SolidWorksService.Sketch.cs  (+2 more)
solidworks-execution/contracts/: execution-response.json  state-format.json  tool-schemas.json
